--- a/HEScoreMicro.UI/src/app/views/address/address.component.html
+++ b/HEScoreMicro.UI/src/app/views/address/address.component.html
@@ -30,7 +30,7 @@
         </div>
         <div class="col-md-6">
           <div class="input-box">
-            <label for="addressLine"> Address Line </label>
+            <label for="addressLine"> Address Line (Apartment / Unit Number)</label>
             <input
               formControlName="addressLine"
               type="text"
