--- a/HEScoreMicro.UI/src/app/views/about/about.component.html
+++ b/HEScoreMicro.UI/src/app/views/about/about.component.html
@@ -367,5 +367,6 @@
         </button>
       </div>
     </form>
+    <app-print-hpxml [buildingId]="this.buildingId"></app-print-hpxml>
   </div>
 </section>
