--- a/HEScoreMicro.UI/src/app/views/address/address.component.html
+++ b/HEScoreMicro.UI/src/app/views/address/address.component.html
@@ -198,5 +198,6 @@
         </button>
       </div>
     </form>
+    <app-print-hpxml [buildingId]="this.buildingId"></app-print-hpxml>
   </div>
 </section>
