--- a/HEScoreMicro.UI/src/app/views/zones/zone-roof/zone-roof.component.html
+++ b/HEScoreMicro.UI/src/app/views/zones/zone-roof/zone-roof.component.html
@@ -122,7 +122,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
+            <!-- <div class="col-md-6">
               <div class="input-box">
                 <label for="cathedralCeilingArea">
                   Cathedral Ceiling Area
@@ -177,7 +177,7 @@
                   </label>
                 </div>
               </div>
-            </div>
+            </div> -->
             <div class="col-md-6">
               <div class="input-box">
                 <label for="roofArea"> Roof Area </label>
@@ -680,4 +680,5 @@
       </button>
     </div>
   </form>
+  <app-print-hpxml [buildingId]="this.buildingId"></app-print-hpxml>
 </div>
