--- a/HEScoreMicro.UI/src/app/views/systems/pv-system/pv-system.component.html
+++ b/HEScoreMicro.UI/src/app/views/systems/pv-system/pv-system.component.html
@@ -202,5 +202,6 @@
         </button>
       </div>
     </form>
+    <app-print-hpxml [buildingId]="this.buildingId"></app-print-hpxml>
   </div>
 </section>
