--- a/HEScoreMicro.UI/src/app/views/systems/water-heater/water-heater.component.html
+++ b/HEScoreMicro.UI/src/app/views/systems/water-heater/water-heater.component.html
@@ -148,5 +148,6 @@
         </button>
       </div>
     </form>
+    <app-print-hpxml [buildingId]="this.buildingId"></app-print-hpxml>
   </div>
 </section>
