--- a/HEScoreMicro.UI/src/app/views/systems/water-heater/water-heater.component.html
+++ b/HEScoreMicro.UI/src/app/views/systems/water-heater/water-heater.component.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="select-box">
-            <label> Water Heater Type</label>
+            <label class="required"> Water Heater Type</label>
             <ng-select
               [items]="waterHeaterTypeOptions"
               bindLabel="name"
@@ -30,114 +30,131 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="select-box">
-            <label> Know Water Heater Energy Factor</label>
-            <ng-select
-              [items]="booleanOptions"
-              bindLabel="name"
-              [clearable]="true"
-              [closeOnSelect]="true"
-              bindValue="value"
-              placeholder="Know Water Heater Energy Factor"
-              id="knowWaterHeaterEnergyFactor"
-              formControlName="knowWaterHeaterEnergyFactor"
-            >
-            </ng-select>
-            <div
-              class="errormsg"
-              *ngIf="
-                (waterHeaterControl['knowWaterHeaterEnergyFactor']?.touched ||
-                  waterHeaterControl['knowWaterHeaterEnergyFactor']?.dirty) &&
-                waterHeaterControl['knowWaterHeaterEnergyFactor']?.invalid
-              "
-            >
-              <label class="text-danger fw-semibold position-absolute">
-                Know Water Heater Energy Factor is invalid
-              </label>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="select-box">
-            <label> Unit</label>
-            <ng-select
-              [items]="unitOptions"
-              bindLabel="name"
-              [clearable]="true"
-              [closeOnSelect]="true"
-              bindValue="value"
-              placeholder="Unit"
-              id="unit"
-              formControlName="unit"
-            >
-            </ng-select>
-            <div
-              class="errormsg"
-              *ngIf="
-                (waterHeaterControl['unit']?.touched ||
-                  waterHeaterControl['unit']?.dirty) &&
-                waterHeaterControl['unit']?.invalid
-              "
-            >
-              <label class="text-danger fw-semibold position-absolute">
-                Unit is invalid
-              </label>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="input-box">
-            <label for="energyValue"> Energy Value </label>
-            <input
-              formControlName="energyValue"
-              type="number"
-              id="energyValue"
-              placeholder="Energy Value"
-            />
-            <div
-              class="errormsg"
-              *ngIf="
-                (waterHeaterControl['energyValue']?.touched ||
-                  waterHeaterControl['energyValue']?.dirty) &&
-                waterHeaterControl['energyValue']?.invalid
-              "
-            >
-              <label
-                for="energyValue"
-                class="text-danger fw-semibold position-absolute"
+        <ng-container *ngIf="waterHeaterControl['waterHeaterType'].value">
+          <div
+            class="col-md-6"
+            *ngIf="
+              waterHeaterControl['waterHeaterType'].value?.endsWith('Storage')
+            "
+          >
+            <div class="select-box">
+              <label class="required"> Know Water Heater Energy Factor</label>
+              <ng-select
+                [items]="booleanOptions"
+                bindLabel="name"
+                [clearable]="true"
+                [closeOnSelect]="true"
+                bindValue="value"
+                placeholder="Know Water Heater Energy Factor"
+                id="knowWaterHeaterEnergyFactor"
+                formControlName="knowWaterHeaterEnergyFactor"
               >
-                Energy Value is invalid
-              </label>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="input-box">
-            <label for="yearOfManufacture"> Year Of Manufacture </label>
-            <input
-              formControlName="yearOfManufacture"
-              type="number"
-              id="yearOfManufacture"
-              placeholder="Year Of Manufacture"
-            />
-            <div
-              class="errormsg"
-              *ngIf="
-                (waterHeaterControl['yearOfManufacture']?.touched ||
-                  waterHeaterControl['yearOfManufacture']?.dirty) &&
-                waterHeaterControl['yearOfManufacture']?.invalid
-              "
-            >
-              <label
-                for="yearOfManufacture"
-                class="text-danger fw-semibold position-absolute"
+              </ng-select>
+              <div
+                class="errormsg"
+                *ngIf="
+                  (waterHeaterControl['knowWaterHeaterEnergyFactor']?.touched ||
+                    waterHeaterControl['knowWaterHeaterEnergyFactor']?.dirty) &&
+                  waterHeaterControl['knowWaterHeaterEnergyFactor']?.invalid
+                "
               >
-                Year Of Manufacture is invalid
-              </label>
+                <label class="text-danger fw-semibold position-absolute">
+                  Know Water Heater Energy Factor is invalid
+                </label>
+              </div>
             </div>
           </div>
-        </div>
+          <ng-container
+            *ngIf="
+              waterHeaterControl['knowWaterHeaterEnergyFactor'].value ||
+              !waterHeaterControl['waterHeaterType'].value?.endsWith('Storage')
+            "
+          >
+            <div class="col-md-6">
+              <div class="select-box">
+                <label class="required"> Unit</label>
+                <ng-select
+                  [items]="unitOptions"
+                  bindLabel="name"
+                  [clearable]="true"
+                  [closeOnSelect]="true"
+                  bindValue="value"
+                  placeholder="Unit"
+                  id="unit"
+                  formControlName="unit"
+                >
+                </ng-select>
+                <div
+                  class="errormsg"
+                  *ngIf="
+                    (waterHeaterControl['unit']?.touched ||
+                      waterHeaterControl['unit']?.dirty) &&
+                    waterHeaterControl['unit']?.invalid
+                  "
+                >
+                  <label class="text-danger fw-semibold position-absolute">
+                    Unit is invalid
+                  </label>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="input-box">
+                <label class="required" for="energyValue"> Energy Value </label>
+                <input
+                  formControlName="energyValue"
+                  type="number"
+                  id="energyValue"
+                  placeholder="Energy Value"
+                />
+                <div
+                  class="errormsg"
+                  *ngIf="
+                    (waterHeaterControl['energyValue']?.touched ||
+                      waterHeaterControl['energyValue']?.dirty) &&
+                    waterHeaterControl['energyValue']?.invalid
+                  "
+                >
+                  <label
+                    for="energyValue"
+                    class="text-danger fw-semibold position-absolute"
+                  >
+                    Energy Value is invalid
+                    {{ waterHeaterControl["energyValue"]?.errors | json }}
+                  </label>
+                </div>
+              </div>
+            </div>
+          </ng-container>
+          <div class="col-md-6" *ngIf="waterHeaterControl['knowWaterHeaterEnergyFactor']?.value == false">
+            <div class="select-box">
+              <label class="required"> Year Of Manufacture</label>
+              <ng-select
+                [items]="year1972Options"
+                bindLabel="name"
+                [clearable]="true"
+                [closeOnSelect]="true"
+                bindValue="value"
+                placeholder="Water Heater Type"
+                id="yearOfManufacture"
+                formControlName="yearOfManufacture"
+              >
+              </ng-select>
+              <div
+                class="errormsg"
+                *ngIf="
+                  (waterHeaterControl['yearOfManufacture']?.touched ||
+                    waterHeaterControl['yearOfManufacture']?.dirty) &&
+                  waterHeaterControl['yearOfManufacture']?.invalid
+                "
+              >
+                <label class="text-danger fw-semibold position-absolute">
+                  Year Of Manufacture is invalid
+                </label>
+              </div>
+            </div>
+          </div>
+        </ng-container>
       </div>
       <div class="d-flex justify-content-end gap-3 mt-4">
         <button type="button" class="bg-primary btn-style" (click)="onSave()">
